waterfall chart updates

--- a/src/waterfallChartTest.html
+++ b/src/waterfallChartTest.html
@@ -5,10 +5,10 @@
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-		<link rel="stylesheet" type="text/css" href="WaterfallChart.css"/>
+		<link rel="stylesheet" type="text/css" href="waterfallChart/WaterfallChart.css"/>
 
 		<script type="text/javascript" src="JsProfiler.js"></script>
-        <script type="text/javascript" src="JsProfiler.WaterfallChartGenerator.js"></script>
+        <script type="text/javascript" src="waterfallChart/WaterfallChart.js"></script>
 		<script type="text/javascript" src="jsProfilerTest.js"></script>
         
 	</head>
