--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
 		<link rel="stylesheet" type="text/css" href="WaterfallChart.css"/>
 
-		<script type="text/javascript" src="JsProfiler.js"></script>
-		<script type="text/javascript" src="JsProfiler.WaterfallChartGenerator.js"></script>
-		<script type="text/javascript" src="jsProfilerTest.js"></script>
+		<script type="text/javascript" src="../JsProfiler.js"></script>
+		<script type="text/javascript" src="WaterfallChart.js"></script>
+		<script type="text/javascript" src="../jsProfilerTest.js"></script>
 		<script type="text/javascript">
 			var profiler = new JsProfiler(),
 				rootRecord, wfChart;
