--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="JsProfiler.js"></script>
         <script type="text/javascript" src="JsProfiler.HtmlTableGenerator.js"></script>
         <script type="text/javascript" src="JsProfiler.ConsoleTableGenerator.js"></script>
-		<script type="text/javascript" src="jsProfilerTest.js"></script>
+		<script type="text/javascript" src="JsProfilerTest.js"></script>
         
         <link rel="stylesheet" type="text/css" href="HtmlTableGenerator.css" />
 	</head>
