--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -8,7 +8,7 @@
 
 		<script type="text/javascript" src="../JsProfiler.js"></script>
 		<script type="text/javascript" src="WaterfallChart.js"></script>
-		<script type="text/javascript" src="../jsProfilerTest.js"></script>
+		<script type="text/javascript" src="../JsProfilerTest.js"></script>
 		<script type="text/javascript">
 			var profiler = new JsProfiler(),
 				rootRecord, wfChart;
