--- a/src/waterfallChartTest.html
+++ b/src/waterfallChartTest.html
@@ -9,7 +9,7 @@
 
 		<script type="text/javascript" src="JsProfiler.js"></script>
         <script type="text/javascript" src="waterfallChart/WaterfallChart.js"></script>
-		<script type="text/javascript" src="jsProfilerTest.js"></script>
+		<script type="text/javascript" src="JsProfilerTest.js"></script>
         
 	</head>
 	<body>
