--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -65,166 +65,171 @@
 		<div class="jsp_wc_container jsp_fillParent">
 			<div class="jsp_wc_curtain jsp_fillParent"></div>
 			<div class="jsp_wc_table">
-				<div class="jsp_wc_timelineOverview">
-					<div class="jsp_wc_rightColumn jsp_wc_row"></div>
+				<div class="jsp_wc_header">
+					<div class="jsp_wc_timelineOverview"></div>
 				</div>
-				<div class="jsp_wc_scrollView">
-					<div class="jsp_wc_leftColumn">
-						<div class="jsp_wc_row jsp_wc_recordNamesHeader">Records</div>
-						<div class="jsp_wc_recordNamesBackground">
-							<!-- HTML_EXCLUDE_BEGIN -->
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<!-- HTML_EXCLUDE_END -->
-						</div>
-						<div class="jsp_wc_recordNames">
-							<!-- HTML_EXCLUDE_BEGIN -->
-							<div class="jsp_wc_recordNameContainer">
-								<div class="jsp_wc_row">label 1</div>
-							</div>
-							<div class="jsp_wc_recordNameContainer">
-								<div class="jsp_wc_row">label 2</div>
-								<div class="jsp_wc_recordNameContainer">
-									<div class="jsp_wc_row">label 3</div>
-									<div class="jsp_wc_recordNameContainer">
-										<div class="jsp_wc_row">label 4</div>
-									</div>
-								</div>
-								<div class="jsp_wc_recordNameContainer">
-									<div class="jsp_wc_row">label 5</div>
-								</div>
-								<div class="jsp_wc_recordNameContainer">
-									<div class="jsp_wc_row">label 6</div>
-									<div class="jsp_wc_recordNameContainer">
-										<div class="jsp_wc_row">label 7</div>
-									</div>
-								</div>
-							</div>
-							<div class="jsp_wc_recordNameContainer">
-								<div class="jsp_wc_row">label 8</div>
-								<div class="jsp_wc_recordNameContainer">
-									<div class="jsp_wc_row">label 9</div>
-								</div>
-							</div>
-							<!-- HTML_EXCLUDE_END -->
-						</div>
+				<div class="jsp_wc_body">
+					<div class="jsp_wc_bodyOverlays">
+						<div class="jsp_wc_row jsp_wc_timeline"></div>
+						<div class="jsp_wc_recordGridLinesBackground jsp_wc_gridLineStyle"></div>
 					</div>
-					<div class="jsp_wc_rightColumn">
-						<div class="jsp_wc_recordsBackground">
-							<!-- HTML_EXCLUDE_BEGIN -->
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<div class="jsp_wc_row"></div>
-							<!-- HTML_EXCLUDE_END -->
-						</div>
-						<div class="jsp_wc_records">
-							<!-- HTML_EXCLUDE_BEGIN -->
-							<div class="jsp_wc_recordContainer">
-								<div class="jsp_wc_record" style="margin-left:8.3333333333%;">
-									<div class="jsp_wc_recordBarsContainer">
-										<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:10%;"></div>
+					<div class="jsp_wc_scrollView">
+						<div class="jsp_wc_leftColumn">
+							<div class="jsp_wc_row jsp_wc_recordNamesHeader">Records</div>
+							<div class="jsp_wc_recordNamesBackground">
+								<!-- HTML_EXCLUDE_BEGIN -->
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<!-- HTML_EXCLUDE_END -->
+							</div>
+							<div class="jsp_wc_recordNames">
+								<!-- HTML_EXCLUDE_BEGIN -->
+								<div class="jsp_wc_recordNameContainer">
+									<div class="jsp_wc_row">label 1</div>
+								</div>
+								<div class="jsp_wc_recordNameContainer">
+									<div class="jsp_wc_row">label 2</div>
+									<div class="jsp_wc_recordNameContainer">
+										<div class="jsp_wc_row">label 3</div>
+										<div class="jsp_wc_recordNameContainer">
+											<div class="jsp_wc_row">label 4</div>
+										</div>
+									</div>
+									<div class="jsp_wc_recordNameContainer">
+										<div class="jsp_wc_row">label 5</div>
+									</div>
+									<div class="jsp_wc_recordNameContainer">
+										<div class="jsp_wc_row">label 6</div>
+										<div class="jsp_wc_recordNameContainer">
+											<div class="jsp_wc_row">label 7</div>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="jsp_wc_recordContainer">
-								<div class="jsp_wc_record" style="margin-left:25%;">
-									<div class="jsp_wc_containmentTools">
-										<div class="jsp_wc_recordBracket"></div>
-										<div class="jsp_wc_foldHandleUnfolded"></div>
+								<div class="jsp_wc_recordNameContainer">
+									<div class="jsp_wc_row">label 8</div>
+									<div class="jsp_wc_recordNameContainer">
+										<div class="jsp_wc_row">label 9</div>
 									</div>
-									<div class="jsp_wc_recordBarsContainer">
-										<div class="jsp_wc_recordBar jsp_wc_asyncRecordBar" style="width:51.6666666667%;"></div>
-										<div class="jsp_wc_recordBar jsp_wc_childRecordBar" style="left:58.33%; width:8.333%;"></div>
-										<div class="jsp_wc_recordBar jsp_wc_childRecordBar" style="left:71.67%; width:5%;"></div>
-										<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:16.67%;"></div>
+								</div>
+								<!-- HTML_EXCLUDE_END -->
+							</div>
+						</div>
+						<div class="jsp_wc_rightColumn">
+							<div class="jsp_wc_recordRowsBackground">
+								<!-- HTML_EXCLUDE_BEGIN -->
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<div class="jsp_wc_row"></div>
+								<!-- HTML_EXCLUDE_END -->
+							</div>
+							<div class="jsp_wc_records">
+								<!-- HTML_EXCLUDE_BEGIN -->
+								<div class="jsp_wc_recordContainer">
+									<div class="jsp_wc_record" style="margin-left:8.3333333333%;">
+										<div class="jsp_wc_recordBarsContainer">
+											<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:10%;"></div>
+										</div>
 									</div>
 								</div>
 								<div class="jsp_wc_recordContainer">
-									<div class="jsp_wc_record" style="margin-left:26.67%;">
+									<div class="jsp_wc_record" style="margin-left:25%;">
 										<div class="jsp_wc_containmentTools">
 											<div class="jsp_wc_recordBracket"></div>
 											<div class="jsp_wc_foldHandleUnfolded"></div>
 										</div>
 										<div class="jsp_wc_recordBarsContainer">
-											<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:10%;"></div>
+											<div class="jsp_wc_recordBar jsp_wc_asyncRecordBar" style="width:51.6666666667%;"></div>
+											<div class="jsp_wc_recordBar jsp_wc_childRecordBar" style="left:58.33%; width:8.333%;"></div>
+											<div class="jsp_wc_recordBar jsp_wc_childRecordBar" style="left:71.67%; width:5%;"></div>
+											<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:16.67%;"></div>
 										</div>
 									</div>
 									<div class="jsp_wc_recordContainer">
 										<div class="jsp_wc_record" style="margin-left:26.67%;">
 											<div class="jsp_wc_containmentTools">
 												<div class="jsp_wc_recordBracket"></div>
-												<div class="jsp_wc_foldHandleFolded"></div>
+												<div class="jsp_wc_foldHandleUnfolded"></div>
 											</div>
 											<div class="jsp_wc_recordBarsContainer">
-												<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:6.667%;"></div>
+												<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:10%;"></div>
 											</div>
 										</div>
-									</div>
-								</div>
-								<div class="jsp_wc_recordContainer">
-									<div class="jsp_wc_record" style="margin-left:36.67%;">
-										<div class="jsp_wc_recordBarsContainer">
-											<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:5%;"></div>
-										</div>
-									</div>
-								</div>
-								<div class="jsp_wc_recordContainer">
-									<div class="jsp_wc_record" style="margin-left:58.33%;">
-										<div class="jsp_wc_containmentTools">
-											<div class="jsp_wc_recordBracket"></div>
-											<div class="jsp_wc_foldHandleUnfolded"></div>
-										</div>
-										<div class="jsp_wc_recordBarsContainer">
-											<div class="jsp_wc_recordBar jsp_wc_asyncRecordBar" style="width:18.33%;"></div>
-											<div class="jsp_wc_recordBar jsp_wc_childRecordBar" style="left:71.66%; width:5%;"></div>
-											<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:8.33%;"></div>
+										<div class="jsp_wc_recordContainer">
+											<div class="jsp_wc_record" style="margin-left:26.67%;">
+												<div class="jsp_wc_containmentTools">
+													<div class="jsp_wc_recordBracket"></div>
+													<div class="jsp_wc_foldHandleFolded"></div>
+												</div>
+												<div class="jsp_wc_recordBarsContainer">
+													<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:6.667%;"></div>
+												</div>
+											</div>
 										</div>
 									</div>
 									<div class="jsp_wc_recordContainer">
-										<div class="jsp_wc_record" style="margin-left:71.67%;">
+										<div class="jsp_wc_record" style="margin-left:36.67%;">
 											<div class="jsp_wc_recordBarsContainer">
 												<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:5%;"></div>
 											</div>
 										</div>
 									</div>
-								</div>
-							</div>
-							<div class="jsp_wc_recordContainer">
-								<div class="jsp_wc_record" style="margin-left:45%;">
-								<div class="jsp_wc_containmentTools">
-									<div class="jsp_wc_recordBracket"></div>
-									<div class="jsp_wc_foldHandleUnfolded"></div>
-								</div>
-								<div class="jsp_wc_recordBarsContainer">
-									<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:6.667%"></div>
-								</div>
-								</div>
-								<div class="jsp_wc_recordContainer">
-									<div class="jsp_wc_record" style="margin-left:46.67%;">
-										<div class="jsp_wc_recordBarsContainer">
-											<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:3.333%"></div>
+									<div class="jsp_wc_recordContainer">
+										<div class="jsp_wc_record" style="margin-left:58.33%;">
+											<div class="jsp_wc_containmentTools">
+												<div class="jsp_wc_recordBracket"></div>
+												<div class="jsp_wc_foldHandleUnfolded"></div>
+											</div>
+											<div class="jsp_wc_recordBarsContainer">
+												<div class="jsp_wc_recordBar jsp_wc_asyncRecordBar" style="width:18.33%;"></div>
+												<div class="jsp_wc_recordBar jsp_wc_childRecordBar" style="left:71.66%; width:5%;"></div>
+												<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:8.33%;"></div>
+											</div>
+										</div>
+										<div class="jsp_wc_recordContainer">
+											<div class="jsp_wc_record" style="margin-left:71.67%;">
+												<div class="jsp_wc_recordBarsContainer">
+													<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:5%;"></div>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
+								<div class="jsp_wc_recordContainer">
+									<div class="jsp_wc_record" style="margin-left:45%;">
+									<div class="jsp_wc_containmentTools">
+										<div class="jsp_wc_recordBracket"></div>
+										<div class="jsp_wc_foldHandleUnfolded"></div>
+									</div>
+									<div class="jsp_wc_recordBarsContainer">
+										<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:6.667%"></div>
+									</div>
+									</div>
+									<div class="jsp_wc_recordContainer">
+										<div class="jsp_wc_record" style="margin-left:46.67%;">
+											<div class="jsp_wc_recordBarsContainer">
+												<div class="jsp_wc_recordBar jsp_wc_selfRecordBar" style="width:3.333%"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- HTML_EXCLUDE_END -->
 							</div>
-							<!-- HTML_EXCLUDE_END -->
 						</div>
 					</div>
 				</div>
-				<div class="jsp_wc_row jsp_wc_timeline"></div>
 			</div>
 		</div>
 		<!-- HTML_END -->
