Updated gridlines & added time labels

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -70,8 +70,10 @@
 				</div>
 				<div class="jsp_wc_body">
 					<div class="jsp_wc_bodyOverlays">
-						<div class="jsp_wc_row jsp_wc_timeline"></div>
-						<div class="jsp_wc_recordGridLinesBackground jsp_wc_gridLineStyle"></div>
+						<div class="jsp_wc_row jsp_wc_timeline">
+							<div class="jsp_wc_gridLinesContainer jsp_wc_timelineGridLinesContainer"></div>
+						</div>
+						<div class="jsp_wc_gridLinesContainer jsp_wc_recordGridLinesContainer"></div>
 					</div>
 					<div class="jsp_wc_scrollView">
 						<div class="jsp_wc_leftColumn">
