Added resize handle

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -74,6 +74,7 @@
 							<div class="jsp_wc_gridLinesContainer jsp_wc_timelineGridLinesContainer"></div>
 						</div>
 						<div class="jsp_wc_gridLinesContainer jsp_wc_recordGridLinesContainer"></div>
+						<div class="jsp_wc_resizeHandle"></div>
 					</div>
 					<div class="jsp_wc_scrollView">
 						<div class="jsp_wc_leftColumn">
