Added drag handles to the timeline overview

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -66,7 +66,13 @@
 			<div class="jsp_wc_curtain jsp_fillParent"></div>
 			<div class="jsp_wc_table">
 				<div class="jsp_wc_header">
-					<div class="jsp_wc_timelineOverview"></div>
+					<div class="jsp_wc_rightColumn">
+						<div class="jsp_wc_timelineOverview">
+							<div class="jsp_wc_timelineOverviewGridLinesContainer"></div>
+							<div class="jsp_wc_timelineOverviewShadowOverlay jsp_wc_timelineOverviewLeftShadowOverlay"><div class="jsp_wc_timelineOverviewHandle"></div></div>
+							<div class="jsp_wc_timelineOverviewShadowOverlay jsp_wc_timelineOverviewRightShadowOverlay"><div class="jsp_wc_timelineOverviewHandle"></div></div>
+						</div>
+					</div>
 				</div>
 				<div class="jsp_wc_body">
 					<div class="jsp_wc_bodyOverlays">
