Added timeline panning functionality

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -69,6 +69,7 @@
 					<div class="jsp_wc_rightColumn">
 						<div class="jsp_wc_timelineOverview">
 							<div class="jsp_wc_timelineOverviewGridLinesContainer"></div>
+							<div class="jsp_wc_timelineOverviewMoveHandle"></div>
 							<div class="jsp_wc_timelineOverviewShadowOverlay jsp_wc_timelineOverviewLeftShadowOverlay"><div class="jsp_wc_timelineOverviewHandle"></div></div>
 							<div class="jsp_wc_timelineOverviewShadowOverlay jsp_wc_timelineOverviewRightShadowOverlay"><div class="jsp_wc_timelineOverviewHandle"></div></div>
 						</div>
