Refactoring waterfall into multiple files

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -8,6 +8,10 @@
 
 		<script type="text/javascript" src="../JsProfiler.js"></script>
 		<script type="text/javascript" src="WaterfallChart.js"></script>
+		<script type="text/javascript" src="WCRecordModel.js"></script>
+		<script type="text/javascript" src="WCTableView.js"></script>
+		<script type="text/javascript" src="WCRecordView.js"></script>
+		<script type="text/javascript" src="TimelineOverview.js"></script>
 		<script type="text/javascript" src="../JsProfilerTest.js"></script>
 		<script type="text/javascript">
 			var profiler = new JsProfiler(),
