Change Waterflow Chart's header height and its buttons look and size

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -35,11 +35,20 @@
 						<div class="jspwc_headerButton jspwc_moveHandle"></div>
 					</div>
 					<div class="jspwc_rightColumn">
+						<div class="jspwc_headerOverlays">
+							<div class="jspwc_gridlinesContainer jspwc_headerGridlinesContainer"></div>
+							<div class="jspwc_timelineOverviewBottomBorder"></div>
+						</div>
 						<div class="jspwc_timelineOverview">
-							<div class="jspwc_timelineOverviewGridlinesContainer"></div>
 							<div class="jspwc_timelineOverviewMoveHandle"></div>
-							<div class="jspwc_timelineOverviewShadowOverlay jspwc_timelineOverviewLeftShadowOverlay"><div class="jspwc_timelineOverviewHandle"></div></div>
-							<div class="jspwc_timelineOverviewShadowOverlay jspwc_timelineOverviewRightShadowOverlay"><div class="jspwc_timelineOverviewHandle"></div></div>
+							<div class="jspwc_timelineOverviewShadowOverlay jspwc_timelineOverviewLeftShadowOverlay">
+								<div class="jspwc_timelineOverviewGuide"></div>
+								<div class="jspwc_timelineOverviewHandle"></div>
+							</div>
+							<div class="jspwc_timelineOverviewShadowOverlay jspwc_timelineOverviewRightShadowOverlay">
+								<div class="jspwc_timelineOverviewGuide"></div>
+								<div class="jspwc_timelineOverviewHandle"></div>
+							</div>
 						</div>
 					</div>
 				</div>
