Add CPU Time Overview bar

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -39,7 +39,7 @@
 							<div class="jspwc_gridlinesContainer jspwc_headerGridlinesContainer"></div>
 							<div class="jspwc_timelineOverviewBottomBorder"></div>
 						</div>
-						<div class="jspwc_timelineOverview">
+						<div class="jspwc_headerRow jspwc_timelineOverview">
 							<div class="jspwc_timelineOverviewMoveHandle"></div>
 							<div class="jspwc_timelineOverviewShadowOverlay jspwc_timelineOverviewLeftShadowOverlay">
 								<div class="jspwc_timelineOverviewGuide"></div>
@@ -50,6 +50,7 @@
 								<div class="jspwc_timelineOverviewHandle"></div>
 							</div>
 						</div>
+						<div class="jspwc_headerRow jspwc_cpuTimeOverview"></div>
 					</div>
 				</div>
 				<div class="jspwc_body">
