Added an option to view flat or "synchronous only" waterfall of records.

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -33,6 +33,7 @@
 						<div class="jspwc_headerButton jspwc_closeHandle"></div>
 						<div class="jspwc_headerButton jspwc_maximizeHandle"></div>
 						<div class="jspwc_headerButton jspwc_moveHandle"></div>
+						<div class="jspwc_headerButton jspwc_asyncRecordsHandle"></div>
 					</div>
 					<div class="jspwc_rightColumn">
 						<div class="jspwc_headerOverlays">
