Added vertical handle to resize waterfall chart columns

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -4,7 +4,7 @@
 		<title>JavaScript Profiler Waterfall Chart</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-		<link rel="stylesheet" type="text/css" href="WaterfallChart.css"/>
+		<link rel="stylesheet" type="text/css" href="WaterfallChart.css" id="jspwc_css"/>
 		<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
 
 		<script type="text/javascript" src="../JsProfiler.js"></script>
@@ -28,6 +28,7 @@
 		<div class="jspwc_container jsp_fillParent">
 			<div class="jspwc_curtain jsp_fillParent"></div>
 			<div class="jspwc_table">
+				<div class="jspwc_columnResizeHandle"></div>
 				<div class="jspwc_header">
 					<div class="jspwc_leftColumn">
 						<div class="jspwc_headerButton jspwc_closeHandle"></div>
