Changed main records container to use percent values for its width and left properties

--- a/src/waterfallChart/WaterfallChart.html
+++ b/src/waterfallChart/WaterfallChart.html
@@ -125,97 +125,99 @@
 								<div class="jspwc_row"></div>
 								<!-- HTML_EXCLUDE_END -->
 							</div>
-							<div class="jspwc_records">
-								<!-- HTML_EXCLUDE_BEGIN -->
-								<div class="jspwc_recordContainer">
-									<div class="jspwc_record" style="margin-left:8.3333333333%;">
-										<div class="jspwc_recordBarsContainer">
-											<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:10%;"></div>
-										</div>
-									</div>
-								</div>
-								<div class="jspwc_recordContainer">
-									<div class="jspwc_record" style="margin-left:25%;">
-										<div class="jspwc_containmentTools">
-											<div class="jspwc_recordBracket"></div>
-											<div class="jspwc_foldHandleUnfolded"></div>
-										</div>
-										<div class="jspwc_recordBarsContainer">
-											<div class="jspwc_recordBar jspwc_asyncRecordBar" style="width:51.6666666667%;"></div>
-											<div class="jspwc_recordBar jspwc_childRecordBar" style="left:58.33%; width:8.333%;"></div>
-											<div class="jspwc_recordBar jspwc_childRecordBar" style="left:71.67%; width:5%;"></div>
-											<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:16.67%;"></div>
+							<div class="jspwc_recordsWrapper">
+								<div class="jspwc_records">
+									<!-- HTML_EXCLUDE_BEGIN -->
+									<div class="jspwc_recordContainer">
+										<div class="jspwc_record" style="margin-left:8.3333333333%;">
+											<div class="jspwc_recordBarsContainer">
+												<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:10%;"></div>
+											</div>
 										</div>
 									</div>
 									<div class="jspwc_recordContainer">
-										<div class="jspwc_record" style="margin-left:26.67%;">
+										<div class="jspwc_record" style="margin-left:25%;">
 											<div class="jspwc_containmentTools">
 												<div class="jspwc_recordBracket"></div>
 												<div class="jspwc_foldHandleUnfolded"></div>
 											</div>
 											<div class="jspwc_recordBarsContainer">
-												<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:10%;"></div>
+												<div class="jspwc_recordBar jspwc_asyncRecordBar" style="width:51.6666666667%;"></div>
+												<div class="jspwc_recordBar jspwc_childRecordBar" style="left:58.33%; width:8.333%;"></div>
+												<div class="jspwc_recordBar jspwc_childRecordBar" style="left:71.67%; width:5%;"></div>
+												<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:16.67%;"></div>
 											</div>
 										</div>
 										<div class="jspwc_recordContainer">
 											<div class="jspwc_record" style="margin-left:26.67%;">
 												<div class="jspwc_containmentTools">
 													<div class="jspwc_recordBracket"></div>
-													<div class="jspwc_foldHandleFolded"></div>
+													<div class="jspwc_foldHandleUnfolded"></div>
 												</div>
 												<div class="jspwc_recordBarsContainer">
-													<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:6.667%;"></div>
+													<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:10%;"></div>
 												</div>
 											</div>
-										</div>
-									</div>
-									<div class="jspwc_recordContainer">
-										<div class="jspwc_record" style="margin-left:36.67%;">
-											<div class="jspwc_recordBarsContainer">
-												<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:5%;"></div>
-											</div>
-										</div>
-									</div>
-									<div class="jspwc_recordContainer">
-										<div class="jspwc_record" style="margin-left:58.33%;">
-											<div class="jspwc_containmentTools">
-												<div class="jspwc_recordBracket"></div>
-												<div class="jspwc_foldHandleUnfolded"></div>
-											</div>
-											<div class="jspwc_recordBarsContainer">
-												<div class="jspwc_recordBar jspwc_asyncRecordBar" style="width:18.33%;"></div>
-												<div class="jspwc_recordBar jspwc_childRecordBar" style="left:71.66%; width:5%;"></div>
-												<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:8.33%;"></div>
+											<div class="jspwc_recordContainer">
+												<div class="jspwc_record" style="margin-left:26.67%;">
+													<div class="jspwc_containmentTools">
+														<div class="jspwc_recordBracket"></div>
+														<div class="jspwc_foldHandleFolded"></div>
+													</div>
+													<div class="jspwc_recordBarsContainer">
+														<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:6.667%;"></div>
+													</div>
+												</div>
 											</div>
 										</div>
 										<div class="jspwc_recordContainer">
-											<div class="jspwc_record" style="margin-left:71.67%;">
+											<div class="jspwc_record" style="margin-left:36.67%;">
 												<div class="jspwc_recordBarsContainer">
 													<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:5%;"></div>
 												</div>
 											</div>
 										</div>
-									</div>
-								</div>
-								<div class="jspwc_recordContainer">
-									<div class="jspwc_record" style="margin-left:45%;">
-									<div class="jspwc_containmentTools">
-										<div class="jspwc_recordBracket"></div>
-										<div class="jspwc_foldHandleUnfolded"></div>
-									</div>
-									<div class="jspwc_recordBarsContainer">
-										<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:6.667%"></div>
-									</div>
-									</div>
-									<div class="jspwc_recordContainer">
-										<div class="jspwc_record" style="margin-left:46.67%;">
-											<div class="jspwc_recordBarsContainer">
-												<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:3.333%"></div>
+										<div class="jspwc_recordContainer">
+											<div class="jspwc_record" style="margin-left:58.33%;">
+												<div class="jspwc_containmentTools">
+													<div class="jspwc_recordBracket"></div>
+													<div class="jspwc_foldHandleUnfolded"></div>
+												</div>
+												<div class="jspwc_recordBarsContainer">
+													<div class="jspwc_recordBar jspwc_asyncRecordBar" style="width:18.33%;"></div>
+													<div class="jspwc_recordBar jspwc_childRecordBar" style="left:71.66%; width:5%;"></div>
+													<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:8.33%;"></div>
+												</div>
+											</div>
+											<div class="jspwc_recordContainer">
+												<div class="jspwc_record" style="margin-left:71.67%;">
+													<div class="jspwc_recordBarsContainer">
+														<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:5%;"></div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
+									<div class="jspwc_recordContainer">
+										<div class="jspwc_record" style="margin-left:45%;">
+										<div class="jspwc_containmentTools">
+											<div class="jspwc_recordBracket"></div>
+											<div class="jspwc_foldHandleUnfolded"></div>
+										</div>
+										<div class="jspwc_recordBarsContainer">
+											<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:6.667%"></div>
+										</div>
+										</div>
+										<div class="jspwc_recordContainer">
+											<div class="jspwc_record" style="margin-left:46.67%;">
+												<div class="jspwc_recordBarsContainer">
+													<div class="jspwc_recordBar jspwc_selfRecordBar" style="width:3.333%"></div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- HTML_EXCLUDE_END -->
 								</div>
-								<!-- HTML_EXCLUDE_END -->
 							</div>
 						</div>
 					</div>
